objects/Signature__c/Signature__c.object-meta.xml
<CustomObject>
    <label>Signature</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>