objects/Signature__c/fields/Customer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Comment__c</fullName>
    <label>Customer Comment</label>
    <type>TextArea</type>
</CustomField>