objects/Signature__c/fields/Print_Name__c.field-meta.xml
<CustomField>
    <fullName>Print_Name__c</fullName>
    <label>Print Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>