objects/Signature__c/fields/Related_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Id__c</fullName>
    <label>Related To ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>