objects/Signature__c/fields/Related_To_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Object_Name__c</fullName>
    <label>Related To Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>