objects/Signature__c/fields/Request_Signature__c.field-meta.xml
<CustomField>
    <fullName>Request_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Signature</label>
    <type>Checkbox</type>
</CustomField>