objects/Signature__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Signatures</relationshipLabel>
    <relationshipName>Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>