objects/Signature__c/fields/Signature_Request__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signature Request</label>
    <referenceTo>Signature_Request__c</referenceTo>
    <relationshipLabel>Signatures</relationshipLabel>
    <relationshipName>Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>