objects/Signature__c/fields/Signature_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request_Date__c</fullName>
    <formula>Signature_Request__r.Request_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Request Date</label>
    <type>DateTime</type>
</CustomField>