objects/Signature__c/fields/Signature_Request_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Signature_Request_Email_Sent__c</fullName>
    <formula>Signature_Request__r.Request_Email_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature Request Email Sent</label>
    <type>Checkbox</type>
</CustomField>