objects/Signature__c/fields/Signer_Role__c.field-meta.xml
<CustomField>
    <fullName>Signer_Role__c</fullName>
    <label>Signer Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>Customer A</fullName>
            </value>
            <value>
                <fullName>Customer B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>