objects/Signature__c/fields/Site_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Token__c</fullName>
    <formula>Signature_Request__r.Site_Access__r.Token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Access Token</label>
    <type>Text</type>
</CustomField>