objects/Signature__c/fields/TM__c.field-meta.xml
<CustomField>
    <fullName>TM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M</label>
    <referenceTo>TM__c</referenceTo>
    <relationshipLabel>Signatures</relationshipLabel>
    <relationshipName>Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>