objects/Signature__c/fields/TM_No__c.field-meta.xml
<CustomField>
    <fullName>TM_No__c</fullName>
    <formula>TM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM No.</label>
    <type>Text</type>
</CustomField>