objects/Signature__c/fields/TM_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>TM_Scheduled_Date__c</fullName>
    <formula>TM__r.Scheduled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Scheduled Date</label>
    <type>Date</type>
</CustomField>