objects/Signature__c/fields/Token_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiration_Date__c</fullName>
    <formula>Signature_Request__r.Site_Access__r.Expiration_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Token Expiration Date</label>
    <type>DateTime</type>
</CustomField>