objects/Signature__c/fields/Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>Void_Reason__c</fullName>
    <label>Void Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>