objects/Signature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TM__c</columns>
    <columns>Customer_Not_Available__c</columns>
    <columns>Request_Signature__c</columns>
    <columns>Print_Name__c</columns>
    <columns>Signed__c</columns>
    <columns>Signature_Date__c</columns>
    <columns>Accept_Terms_and_Conditions__c</columns>
    <columns>Email__c</columns>
    <columns>Voided__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>